# onnxruntime-cuda-cpp-example

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  dynamic_batch_image_model_inference.cpp  fixed_batch_image_model_inference.cpp  fixed_shape_model_inference.py  single_image_model_inference.cpp
examples/: CMakeLists.txt  cuda_based_opencv_image_preprocessing.cpp  cuda_based_opencv_image_resizedcrop.cpp  dynamic_batch_image_model_inference.cpp  dynamic_batch_yolov8.cpp  dynamic_batch_yolov8_single_video_multiple_frames_inference.cpp  dynamic_batch_yolov8_single_video_multiple_frames_inference_tensorrt.cpp  dynamic_batch_yolov8_single_video_single_frame_inference.cpp  dynamic_batch_yolov8_single_video_single_frame_inference_tensorrt.cpp  dynamic_batch_yolov8_tensorrt.cpp  dynamic_batch_yolov8_with_cuda_based_opencv_image_preprocessing.cpp  fixed_batch_image_model_inference.cpp  parse_metadata.cpp  single_image_model_inference.cpp
